--- a/src/app/view/recus/recu-create/recu-create.component.html
+++ b/src/app/view/recus/recu-create/recu-create.component.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <title>Tableau Facture</title>
+  <title>Tableau Recu</title>
   <link rel="stylesheet" href="./recu-create.component.css">
 </head>
 <body>
@@ -32,8 +32,8 @@
     <tbody>
     <tr>
       <th>Description</th>
-      <th>Quantite</th>
-      <th>Prix unitaire</th>
+      <th>Libelle</th>
+      <th>PaiementEffectue</th>
       <th>Prix total</th>
     </tr>
     <tr>
